# vivarium-workbench

./: .dockerignore  .gitignore  .perspective.md  .test_durations  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEMO_RECIPE.md  Dockerfile  EXPLAIN.md  Makefile  NEXT_STEPS.md  README.md  SAVE_SLOT.md  colony.composite.json  hatch_build.py  pyproject.toml  sandbox.py
.github/workflows/: build-and-push.yml  js.yml  pytest.yml  types.yml
.superpowers/: sweep-report.md
.superpowers/sdd/: task-4-report.md  task-7-report.md  task-final-report.md
.todo/: MANIFEST.md  _backlog.md
.todo/plans/: 1-composites-tab-dispatch.md  1-fix-study-detail-interactivity.md  10-release-improved-visual-feedback-smscdk.md  11-demo-recording-prep-local-remote-compute.md  12-durable-remote-run-persistence.md  2-fix-csrf-origin-guard-reverse-proxy.md  3-fix-composite-resolve-unhandled-errors.md  4-remote-govcloud-demo-e2e.md  5-pinned-build-remote-runs.md  6-segment7-ptools-omics-deploy-verify.md  7-pinned-run-progress-ux.md  8-autoparam-ptools-from-exports-tsv.md  9-omics-viewer-0.5.9-register-launch.md
demos/v2ecoli/: .gitignore  NOTES.md  PLAN.md  README.md  VERIFICATION_REPORT.md  WALKTHROUGH-local-remote-compute.md  WALKTHROUGH.md  populate_demo_runs.py  prep_remote_build.py  prep_remote_land.py  verify_demo.py
deploy/: README.md  build-and-push.sh
docs/: ARCHITECTURE-DEEP-DIVE.md  ARCHITECTURE.md  REFACTOR-PLAN.md  STUDY_RUNNER_GAPS.md  USAGE.md  analyses-tab.md  dashboard-api-vs-sms-api.md  data-explorer.md  env-worker-protocol.md  investigation-narrative-schema.md  materialization-lifecycle.md  post-run-analyses.md  ptools-launcher.md  round-trip-pipeline.md  run-backend.md  session-binding.md  session-registry.md  workspace-store.md
frontend/bigraph-loom/: .gitignore  README.md  package-lock.json  package.json  vite.config.js  vite.config.ts  vitest.config.js
info/: colonies.md  hpc.md  memphis-design.css
notes/: ecoli_inference.py
scripts/: build_explorer_assets.py  build_explorer_bio_assets.py  build_loom.sh  build_monomer_meta.py  pytest_gate.sh  run_js_tests.sh  set-govcloud-env.sh  vendor-loom.sh
tests/: conftest.py  known_failures.txt  test_C1_pbg_export.py  test_C2_roundtrip.py  test_C3_sms_client.py  test_C4_cli.py  test_ac_gating_matrix_panel.py  test_acceptance_rollup_surface.py  test_active_branch_staging.py  test_active_workspace_lib.py  test_analysis_outputs.py  test_analysis_viewers_worker.py  test_api_app.py  test_atomic_io.py  test_auth_views_lib.py  test_b4_wiring.py  test_backfill_runs_mirror.py  test_branch_staleness.py  test_catalog_install_source.py  test_catalog_install_views_lib.py  test_catalog_uninstall_views_lib.py  test_chain_derivation.py  test_cli_run_commands.py  test_cli_runs.py  test_cli_sync.py  test_collect_study_feedback.py  test_collect_study_observables.py  test_comparative_runs_lib.py  test_compare_group_mutations_lib.py  test_compose_unification.py  test_composite_author.py  test_composite_characterization.py  test_composite_explore_base_path.py  test_composite_explorer_api.py  test_composite_flush.py  test_composite_mutations_lib.py  test_composite_recipes.py  test_composite_resolution_lint.py  test_composite_resolve_dispatch.py  test_composite_resolve_fallback.py  (+289 more)
tests/js/: test_aig_layout.js  test_chain_block.js  test_layout_opts_for_band.js  test_progress_track.js  test_session.js  test_session_bootstrap.js  test_session_bootstrap_build.js  test_session_status.js
vivarium_dashboard/: __init__.py  _composite_validate.py  cli.py  publish.py  server.py
vivarium_dashboard/api/: __main__.py  app.py
vivarium_dashboard/lib/: _root.py  active_workspace.py  atomic_io.py  auth_views.py  backfill_runs.py  catalog.py  catalog_install_views.py  chain_derivation.py  chain_views.py  cli_runs.py  comparative_viz.py  compare_group_mutations.py  composite_author.py  composite_flush.py  composite_lookup.py  composite_mutations.py  composite_resolve.py  composite_run_views.py  composite_runs.py  composite_state_views.py  composite_subprocess.py  composite_test_run_views.py  composites_query.py  core_builder.py  csrf.py  data_sources.py  discover_composites_runner.py  download_views.py  emitters.py  ensemble_config.py  errors.py  event_log.py  events.py  explorer_data.py  finding_views.py  generate_ts.py  git_commit_views.py  git_status.py  github_auth.py  hpc_dispatch.py  (+92 more)
vivarium_dashboard/static/: aig-graph.js  (+16 more)
vivarium_workbench/: __init__.py  cli.py  env_worker.py  loom_assets.py  publish.py  server.py
vivarium_workbench/loom/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
vivarium_workbench/loom/bigraph_loom/: __init__.py
vivarium_workbench/loom/docs/superpowers/specs/: 2026-06-02-inspector-sidebar-features-design.md
vivarium_workbench/loom/src/: App.css  App.tsx  EmitContext.tsx  api.ts  contract.ts  convert.ts  layout.ts  layoutStore.ts  storeFacts.ts  types.ts  viewStore.ts
vivarium_workbench/loom/src/__tests__/: App.test.tsx  ProcessRail.test.tsx  ResultsPanel.test.tsx  RunPanel.test.tsx  SetupRunPanel.test.tsx  affinity.test.ts  affinityFixture.test.ts  api.test.ts  contract.test.ts  edgeTiers.test.tsx  edgeVisibility.test.ts  emitDefault.test.ts  focusGating.test.tsx  layout.test.ts  pickDrawnEdges.test.ts  processColumn.test.ts  registry.test.ts  semanticZoom.test.tsx  storeTiers.test.tsx  tabSwitch.test.tsx  typeAbbrev.test.ts  useFocus.test.ts  useLayoutMode.test.ts  viewStore.test.ts
vivarium_workbench/loom/src/__tests__/fixtures/: v2ecoli-baseline.json
vivarium_workbench/loom/src/edges/: FloatingStoreEdge.tsx
vivarium_workbench/loom/src/hooks/: useFocus.ts  useLayoutMode.ts
vivarium_workbench/loom/src/layouts/: affinity.ts  hierarchy.ts  pickDrawnEdges.ts  processColumn.ts  registry.ts  types.ts
vivarium_workbench/loom/src/nodes/: ProcessNode.tsx  StoreNode.tsx
vivarium_workbench/loom/src/panels/: DocumentPanel.tsx  ProcessRail.tsx  ResultsPanel.tsx  SetupRunPanel.tsx  Sidebar.tsx  ViewsMenu.tsx  VisualizationsPanel.tsx  filterHidden.ts
(+421 files in other folders)
