[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivarium-dashboard"
version = "0.1.0"
description = "Web-based dashboard for Vivarium / process-bigraph workspaces"
authors = [{name = "Vivarium Collective", email = "team@vivarium-collective.org"}]
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "pyyaml",
    "jsonschema[format-nongpl]>=4.21",
    "pypdf>=4.0",
    "numpy",
    "pydantic>=2",
    "fastapi>=0.110",
    "process-bigraph",
    "bigraph-schema>=1.4.1",
    "pbg-superpowers>=0.14.0",
    # pbg-superpowers 0.14+ requires pbg-basic-processes, which is not yet on
    # PyPI — provide it from git (same pattern as bigraph-loom) so the PyPI
    # pbg-superpowers wheel's transitive dep resolves.
    "pbg-basic-processes @ git+https://github.com/vivarium-collective/pbg-basic-processes.git@main",
    "bigraph-loom @ git+https://github.com/vivarium-collective/bigraph-loom.git@main",
]

[project.optional-dependencies]
viz = ["matplotlib", "imageio", "numpy"]
dev = ["pytest>=7.4", "pytest-timeout", "pytest-json-report>=1.5", "mypy>=1.8", "httpx>=0.27", "uvicorn>=0.29"]
# Optional readers used only by parts of the test suite (parquet/zarr run
# stores). Without them those tests skip (via pytest.importorskip) rather than
# fail. Install with: uv pip install -e ".[dev,test]". See CONTRIBUTING.md.
# (zarr is needed alongside xarray for DataTree.to_zarr in the zarr tests.)
test = ["polars", "xarray", "zarr", "pyarrow"]

[project.scripts]
vivarium-dashboard = "vivarium_dashboard.cli:main"
vivarium-dashboard-publish = "vivarium_dashboard.publish:main"

# bigraph-loom is a PEP 508 direct git URL (not on PyPI), so the wheel build
# backend must opt into direct references — without this, hatchling refuses the
# build on stricter uv/hatchling versions.
[tool.mypy]
python_version = "3.11"
# Incremental adoption: type-check only the new, fully-typed modules for now.
# Widen `files` as more of lib/ is annotated. The bulk of the codebase
# (server.py, the dict-building helpers) is intentionally not checked yet.
files = [
    "vivarium_dashboard/lib/models.py",
    "vivarium_dashboard/lib/active_workspace.py",
    "vivarium_dashboard/lib/investigation_status.py",
    "vivarium_dashboard/lib/saved_visualizations.py",
    "vivarium_dashboard/lib/data_sources.py",
    "vivarium_dashboard/lib/git_status.py",
    "vivarium_dashboard/lib/investigation_views.py",
    "vivarium_dashboard/lib/download_views.py",
    "vivarium_dashboard/lib/study_spec.py",
    "vivarium_dashboard/lib/study_enrichment.py",
    "vivarium_dashboard/lib/rigor_views.py",
    "vivarium_dashboard/lib/observables_views.py",
    "vivarium_dashboard/lib/composite_state_views.py",
    "vivarium_dashboard/lib/composite_run_views.py",
    "vivarium_dashboard/lib/report_views.py",
    "vivarium_dashboard/lib/system_info.py",
    "vivarium_dashboard/lib/study_viz_views.py",
    "vivarium_dashboard/lib/work_views.py",
    "vivarium_dashboard/lib/workspace_deps_views.py",
    "vivarium_dashboard/lib/events.py",
    "vivarium_dashboard/lib/static_serving.py",
    "vivarium_dashboard/lib/study_page.py",
    "vivarium_dashboard/api/app.py",
    "vivarium_dashboard/lib/metadata_mutations.py",
    "vivarium_dashboard/lib/study_crud_mutations.py",
    "vivarium_dashboard/lib/lifecycle_mutations.py",
    "vivarium_dashboard/lib/scaffold_mutations.py",
    "vivarium_dashboard/lib/compare_group_mutations.py",
    "vivarium_dashboard/lib/viz_write_mutations.py",
    "vivarium_dashboard/lib/viz_commit_mutations.py",
    "vivarium_dashboard/lib/upload_mutations.py",
    "vivarium_dashboard/lib/reference_mutations.py",
    "vivarium_dashboard/lib/composite_mutations.py",
    "vivarium_dashboard/lib/investigation_viz_mutations.py",
    "vivarium_dashboard/lib/job_status_views.py",
]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
# api/app.py imports the (still-untyped) stdlib server module to reuse its
# HTTP-free payload builders. Don't descend into it (or its heavy transitive
# deps) — treat followed imports as Any so only models.py + app.py are checked.
follow_imports = "skip"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# `packages` already ships everything tracked under vivarium_dashboard/,
# including static/ and templates/. A force-include of those same paths added
# each data file a SECOND time, which hatchling rejects ("A second file is
# being added to the wheel archive at the same path: .../static/client.js") and
# broke every non-editable/wheel build (e.g. uv sync of the git dependency in
# Docker). They stay shipped via `packages`; no force-include needed.
packages = ["vivarium_dashboard"]
