[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivarium-dashboard"
version = "0.1.0"
description = "Web-based dashboard for Vivarium / process-bigraph workspaces"
authors = [{name = "Vivarium Collective", email = "team@vivarium-collective.org"}]
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "pyyaml",
    "jsonschema[format-nongpl]>=4.21",
    "pypdf>=4.0",
    "numpy",
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "process-bigraph",
    # SQLiteEmitter (and ParquetEmitter) were extracted from process-bigraph at
    # 1.4.17 into the focused pbg-emitters library; pb's `process_bigraph.emitter`
    # only re-exports SQLiteEmitter when pbg-emitters is installed. The dashboard
    # imports SQLiteEmitter (lazily, in several run paths), so depend on it
    # directly. The `[sqlite]` extra is stdlib-only (no extra deps).
    #
    # Task 6 flipped the default emitter to xarray (see lib/emitters.py
    # DEFAULT_EMITTER), so its runtime deps are now MANDATORY, not test-only:
    # pull the pbg-emitters `[xarray]` extra and pin xarray + zarr at the same
    # specifiers the `[test]` extra below uses (kept consistent).
    "pbg-emitters[sqlite,xarray]",
    "xarray>=2026.04",
    # Uncapped (>= not ~=): ~=3.1.6 excluded 3.2.x — a downgrade for py3.12+ vs
    # the prior version-split. The [test] extra below uses a bare `zarr`, so
    # >=3.1.6 keeps the runtime + test specifiers aligned (a floor, not a cap).
    "zarr>=3.1.6",
    "bigraph-schema>=1.4.1",
    "pbg-superpowers>=0.14.0",
    # pbg-superpowers 0.14+ requires pbg-basic-processes, which is not yet on
    # PyPI. Declare it BARE here and supply the git URL via [tool.uv.sources]
    # below — NOT as an inline `pkg @ git+...` direct reference. A baked-in
    # branch URL becomes part of this package's published metadata, and uv
    # refuses to unify it with the bare `pbg-basic-processes` requirement coming
    # from pbg-superpowers → "conflicting URLs" failures in any project that
    # depends on vivarium-dashboard transitively.
    "pbg-basic-processes",
    "bigraph-loom @ git+https://github.com/vivarium-collective/bigraph-loom.git@main",
    "investigation-contracts",
]

[project.optional-dependencies]
viz = ["matplotlib", "imageio", "numpy"]
dev = ["pytest>=7.4", "pytest-timeout", "pytest-json-report>=1.5", "mypy>=1.8", "httpx>=0.27"]
# Optional readers used only by parts of the test suite (parquet/zarr run
# stores). Without them those tests skip (via pytest.importorskip) rather than
# fail. Install with: uv pip install -e ".[dev,test]". See CONTRIBUTING.md.
# (zarr is needed alongside xarray for DataTree.to_zarr in the zarr tests.)
test = ["polars", "xarray", "zarr", "pyarrow"]

[project.scripts]
vivarium-dashboard = "vivarium_dashboard.cli:main"
vivarium-dashboard-publish = "vivarium_dashboard.publish:main"

# Git source for the bare pbg-basic-processes dependency (not on PyPI). uv reads
# this when vivarium-dashboard is the root project; consumers that depend on it
# transitively supply the same URL via their own [tool.uv.sources]. This keeps
# the URL OUT of the published metadata so it never conflicts with the bare
# requirement from pbg-superpowers.
[tool.uv.sources]
# INTERIM: pin to pbg-emitters @main (the interchangeable-emitter framework, PR #11,
# merged 2026-06-29). The dashboard hard-imports `contract_for` /
# `view_from_emit_paths`/`emit_root`/`strategy`, which the last PyPI release (0.1.0)
# lacks. FOLLOW-UP: once pbg-emitters cuts a release carrying these, revert to the
# bare `pbg-emitters[sqlite,xarray]` PyPI dep and drop this source.
pbg-emitters = { git = "https://github.com/vivarium-collective/pbg-emitters.git", branch = "main" }
pbg-basic-processes = { git = "https://github.com/vivarium-collective/pbg-basic-processes.git", branch = "main" }
# investigation-contracts is declared bare in [project.dependencies] (kept out
# of published metadata) and is not on PyPI; supply its git URL here so `uv
# sync`/`uv lock` can resolve it (the editable-install gap that was failing CI).
investigation-contracts = { git = "https://github.com/vivarium-collective/investigation-contracts.git", branch = "main" }

# bigraph-loom is a PEP 508 direct git URL (not on PyPI), so the wheel build
# backend must opt into direct references — without this, hatchling refuses the
# build on stricter uv/hatchling versions.
[tool.mypy]
python_version = "3.11"
# Incremental adoption: type-check only the new, fully-typed modules for now.
# Widen `files` as more of lib/ is annotated. The bulk of the codebase
# (server.py, the dict-building helpers) is intentionally not checked yet.
files = [
    "vivarium_dashboard/lib/startup.py",
    "vivarium_dashboard/lib/models.py",
    "vivarium_dashboard/lib/active_workspace.py",
    "vivarium_dashboard/lib/investigation_status.py",
    "vivarium_dashboard/lib/investigation_registry.py",
    "vivarium_dashboard/lib/saved_visualizations.py",
    "vivarium_dashboard/lib/data_sources.py",
    "vivarium_dashboard/lib/git_status.py",
    "vivarium_dashboard/lib/investigation_views.py",
    "vivarium_dashboard/lib/download_views.py",
    "vivarium_dashboard/lib/study_spec.py",
    "vivarium_dashboard/lib/study_enrichment.py",
    "vivarium_dashboard/lib/rigor_views.py",
    "vivarium_dashboard/lib/observables_views.py",
    "vivarium_dashboard/lib/composite_state_views.py",
    "vivarium_dashboard/lib/composite_run_views.py",
    "vivarium_dashboard/lib/composite_test_run_views.py",
    "vivarium_dashboard/lib/study_create_views.py",
    "vivarium_dashboard/lib/investigation_run_one_views.py",
    "vivarium_dashboard/lib/investigation_run_views.py",
    "vivarium_dashboard/lib/core_builder.py",
    "vivarium_dashboard/lib/json_serialize.py",
    "vivarium_dashboard/lib/report_views.py",
    "vivarium_dashboard/lib/system_info.py",
    "vivarium_dashboard/lib/study_viz_views.py",
    "vivarium_dashboard/lib/work_views.py",
    "vivarium_dashboard/lib/workspace_deps_views.py",
    "vivarium_dashboard/lib/workspace_manifest_views.py",
    "vivarium_dashboard/lib/events.py",
    "vivarium_dashboard/lib/static_serving.py",
    "vivarium_dashboard/lib/study_page.py",
    "vivarium_dashboard/api/app.py",
    "vivarium_dashboard/lib/metadata_mutations.py",
    "vivarium_dashboard/lib/study_crud_mutations.py",
    "vivarium_dashboard/lib/lifecycle_mutations.py",
    "vivarium_dashboard/lib/scaffold_mutations.py",
    "vivarium_dashboard/lib/compare_group_mutations.py",
    "vivarium_dashboard/lib/viz_write_mutations.py",
    "vivarium_dashboard/lib/viz_commit_mutations.py",
    "vivarium_dashboard/lib/upload_mutations.py",
    "vivarium_dashboard/lib/reference_mutations.py",
    "vivarium_dashboard/lib/composite_mutations.py",
    "vivarium_dashboard/lib/investigation_viz_mutations.py",
    "vivarium_dashboard/lib/job_status_views.py",
    "vivarium_dashboard/lib/csrf.py",
    "vivarium_dashboard/lib/source_switch_views.py",
    "vivarium_dashboard/lib/source_build_views.py",
    "vivarium_dashboard/lib/remote_run_views.py",
    "vivarium_dashboard/lib/auth_views.py",
    "vivarium_dashboard/lib/git_commit_views.py",
    "vivarium_dashboard/lib/work_mutations.py",
    "vivarium_dashboard/lib/work_pr_views.py",
    "vivarium_dashboard/lib/workspaces_mutations.py",
    "vivarium_dashboard/lib/workspaces_process_views.py",
    "vivarium_dashboard/lib/misc_mutations.py",
    "vivarium_dashboard/lib/misc_post_views.py",
    "vivarium_dashboard/lib/viz_accept_views.py",
    "vivarium_dashboard/lib/composite_subprocess.py",
    "vivarium_dashboard/lib/study_run_state.py",
    "vivarium_dashboard/lib/study_run_post.py",
    "vivarium_dashboard/lib/study_runs.py",
    "vivarium_dashboard/lib/test_run_views.py",
    "vivarium_dashboard/lib/comparative_runs.py",
    "vivarium_dashboard/lib/run_unblocked_views.py",
    "vivarium_dashboard/lib/viz_core.py",
    "vivarium_dashboard/lib/viz_preview_views.py",
    "vivarium_dashboard/lib/viz_preview_instance_views.py",
    "vivarium_dashboard/lib/install_views.py",
    "vivarium_dashboard/lib/catalog_install_views.py",
    "vivarium_dashboard/lib/catalog_uninstall_views.py",
]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
# api/app.py imports the (still-untyped) stdlib server module to reuse its
# HTTP-free payload builders. Don't descend into it (or its heavy transitive
# deps) — treat followed imports as Any so only models.py + app.py are checked.
follow_imports = "skip"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# `packages` already ships everything tracked under vivarium_dashboard/,
# including static/ and templates/. A force-include of those same paths added
# each data file a SECOND time, which hatchling rejects ("A second file is
# being added to the wheel archive at the same path: .../static/client.js") and
# broke every non-editable/wheel build (e.g. uv sync of the git dependency in
# Docker). They stay shipped via `packages`; no force-include needed.
packages = ["vivarium_dashboard"]
