[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vivarium-workbench"
version = "0.3.1"
description = "Web-based workbench for Vivarium / process-bigraph workspaces"
authors = [{name = "Vivarium Collective", email = "team@vivarium-collective.org"}]
requires-python = ">=3.11"
dependencies = [
    "jinja2",
    "pyyaml",
    "jsonschema[format-nongpl]>=4.21",
    "pypdf>=4.0",
    "numpy",
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "process-bigraph",
    # SQLiteEmitter (and ParquetEmitter) were extracted from process-bigraph at
    # 1.4.17 into the focused pbg-emitters library; pb's `process_bigraph.emitter`
    # only re-exports SQLiteEmitter when pbg-emitters is installed. The dashboard
    # imports SQLiteEmitter (lazily, in several run paths), so depend on it
    # directly. The `[sqlite]` extra is stdlib-only (no extra deps).
    #
    # Task 6 flipped the default emitter to xarray (see lib/emitters.py
    # DEFAULT_EMITTER), so its runtime deps are now MANDATORY, not test-only:
    # pull the pbg-emitters `[xarray]` extra and pin xarray + zarr at the same
    # specifiers the `[test]` extra below uses (kept consistent).
    "pbg-emitters[sqlite,xarray]>=0.2.0",
    "xarray>=2026.04",
    # Uncapped (>= not ~=): ~=3.1.6 excluded 3.2.x — a downgrade for py3.12+ vs
    # the prior version-split. The [test] extra below uses a bare `zarr`, so
    # >=3.1.6 keeps the runtime + test specifiers aligned (a floor, not a cap).
    "zarr>=3.1.6",
    "bigraph-schema>=1.4.1",
    "pbg-superpowers>=0.14.0",
    # pbg-superpowers 0.14+ requires pbg-basic-processes, which is not yet on
    # PyPI. Declare it BARE here and supply the git URL via [tool.uv.sources]
    # below — NOT as an inline `pkg @ git+...` direct reference. A baked-in
    # branch URL becomes part of this package's published metadata, and uv
    # refuses to unify it with the bare `pbg-basic-processes` requirement coming
    # from pbg-superpowers → "conflicting URLs" failures in any project that
    # depends on vivarium-dashboard transitively.
    "pbg-basic-processes",
    "bigraph-loom @ git+https://github.com/vivarium-collective/bigraph-loom.git@main",
    "investigation-contracts",
]

[project.optional-dependencies]
viz = ["matplotlib", "imageio", "numpy"]
dev = ["pytest>=7.4", "pytest-timeout", "pytest-json-report>=1.5", "mypy>=1.8", "httpx>=0.27", "import-linter>=2.0"]
# Optional readers used only by parts of the test suite (parquet/zarr run
# stores). Without them those tests skip (via pytest.importorskip) rather than
# fail. Install with: uv pip install -e ".[dev,test]". See CONTRIBUTING.md.
# (zarr is needed alongside xarray for DataTree.to_zarr in the zarr tests.)
test = ["polars", "xarray", "zarr", "pyarrow"]
demo = ["v2ecoli", "pbg-ptools"]

[project.scripts]
# New canonical console scripts.
vivarium-workbench = "vivarium_workbench.cli:main"
vwb = "vivarium_workbench.cli:main"
vivarium-workbench-publish = "vivarium_workbench.publish:main"
# Back-compat aliases (deprecated; removed in Phase 3). Point at the new module.
vivarium-dashboard = "vivarium_workbench.cli:main"
vdash = "vivarium_workbench.cli:main"
vivarium-dashboard-publish = "vivarium_workbench.publish:main"

# DEMO-BRANCH ONLY: the `demo` extra pulls v2ecoli, which pins Python ==3.12.12
# exactly. The workbench package itself supports >=3.11, but a universal `uv lock`
# must then also solve the 3.11 slice, where v2ecoli is unsatisfiable → "no
# solution". Constrain lock resolution on this (combined-with-v2ecoli) branch to
# 3.12.12 — the version the demo image is built on — so `uv lock` /
# `uv sync --extra demo` resolve. This does NOT change the package's declared
# requires-python (>=3.11 for standalone use); it only scopes the lock.
[tool.uv]
environments = ["python_full_version == '3.12.12'"]

# Git source for the bare pbg-basic-processes dependency (not on PyPI). uv reads
# this when vivarium-dashboard is the root project; consumers that depend on it
# transitively supply the same URL via their own [tool.uv.sources]. This keeps
# the URL OUT of the published metadata so it never conflicts with the bare
# requirement from pbg-superpowers.
[tool.uv.sources]
pbg-basic-processes = { git = "https://github.com/vivarium-collective/pbg-basic-processes.git", branch = "main" }
# investigation-contracts is declared bare in [project.dependencies] (kept out
# of published metadata) and is not on PyPI; supply its git URL here so `uv
# sync`/`uv lock` can resolve it (the editable-install gap that was failing CI).
investigation-contracts = { git = "https://github.com/vivarium-collective/investigation-contracts.git", branch = "main" }
# v2ecoli is NOT a runtime dependency of the vivarium-workbench package — it is
# only needed for the demos/v2ecoli/ scripts. Declare it in [tool.uv.sources]
# so `uv sync --extra demo` resolves the local checkout. The bare `v2ecoli`
# requirement is listed in [project.optional-dependencies] → `demo`.
v2ecoli = { path = "../v2ecoli", editable = true }
# pbg-ptools is the Pathway Tools Omics-Viewer plugin (extracted from v2ecoli).
# LOCAL PATH source on purpose: pbg-ptools depends back on vivarium-workbench,
# and with a path source its own `../vivarium-workbench` resolves to the real
# sibling (== this root project), so uv unifies them — no "conflicting URLs".
# (A git source here would collide with the root, which is why `main` installs
# pbg-ptools via the Dockerfile instead.) This gives the local `--extra demo`
# dev env the PTools viewer, matching the deployed image.
pbg-ptools = { path = "../pbg-ptools", editable = true }


# bigraph-loom is a PEP 508 direct git URL (not on PyPI), so the wheel build
# backend must opt into direct references — without this, hatchling refuses the
# build on stricter uv/hatchling versions.

# ─── import-linter — the ports & adapters layering gate (REFACTOR-PLAN §2A.1) ──
# Keeps `lib.ports` a PURE interface layer: a port may never import a concrete
# adapter or the git/impl modules an adapter wraps. So the domain can depend on
# the interface without dragging in an implementation, and a cloud adapter swaps
# in without the port changing. Enforced in CI (`lint-imports`).
[tool.importlinter]
root_package = "vivarium_workbench"

[[tool.importlinter.contracts]]
name = "ports are pure interfaces (no adapter / no git-impl imports)"
type = "forbidden"
source_modules = ["vivarium_workbench.lib.ports"]
forbidden_modules = [
    "vivarium_workbench.lib.adapters",
    "vivarium_workbench.lib.git_status",
    "vivarium_workbench.lib.work_state",
    "vivarium_workbench.lib.git_commit_views",
]

[tool.mypy]
python_version = "3.11"
# Incremental adoption: type-check only the new, fully-typed modules for now.
# Widen `files` as more of lib/ is annotated. The bulk of the codebase
# (server.py, the dict-building helpers) is intentionally not checked yet.
files = [
    "vivarium_workbench/lib/startup.py",
    "vivarium_workbench/lib/models.py",
    "vivarium_workbench/lib/active_workspace.py",
    "vivarium_workbench/lib/investigation_status.py",
    "vivarium_workbench/lib/investigation_registry.py",
    "vivarium_workbench/lib/saved_visualizations.py",
    "vivarium_workbench/lib/data_sources.py",
    "vivarium_workbench/lib/git_status.py",
    "vivarium_workbench/lib/investigation_views.py",
    "vivarium_workbench/lib/download_views.py",
    "vivarium_workbench/lib/study_spec.py",
    "vivarium_workbench/lib/staging.py",
    "vivarium_workbench/lib/ports/scientific_content.py",
    "vivarium_workbench/lib/adapters/scientific_content.py",
    "vivarium_workbench/lib/study_enrichment.py",
    "vivarium_workbench/lib/rigor_views.py",
    "vivarium_workbench/lib/observables_views.py",
    "vivarium_workbench/lib/composite_state_views.py",
    "vivarium_workbench/lib/composite_run_views.py",
    "vivarium_workbench/lib/composite_test_run_views.py",
    "vivarium_workbench/lib/study_create_views.py",
    "vivarium_workbench/lib/investigation_run_one_views.py",
    "vivarium_workbench/lib/investigation_run_views.py",
    "vivarium_workbench/lib/core_builder.py",
    "vivarium_workbench/lib/json_serialize.py",
    "vivarium_workbench/lib/report_views.py",
    "vivarium_workbench/lib/system_info.py",
    "vivarium_workbench/lib/study_viz_views.py",
    "vivarium_workbench/lib/work_views.py",
    "vivarium_workbench/lib/workspace_deps_views.py",
    "vivarium_workbench/lib/workspace_manifest_views.py",
    "vivarium_workbench/lib/events.py",
    "vivarium_workbench/lib/static_serving.py",
    "vivarium_workbench/lib/study_page.py",
    "vivarium_workbench/api/app.py",
    "vivarium_workbench/lib/metadata_mutations.py",
    "vivarium_workbench/lib/study_crud_mutations.py",
    "vivarium_workbench/lib/lifecycle_mutations.py",
    "vivarium_workbench/lib/scaffold_mutations.py",
    "vivarium_workbench/lib/compare_group_mutations.py",
    "vivarium_workbench/lib/viz_write_mutations.py",
    "vivarium_workbench/lib/viz_commit_mutations.py",
    "vivarium_workbench/lib/upload_mutations.py",
    "vivarium_workbench/lib/reference_mutations.py",
    "vivarium_workbench/lib/composite_mutations.py",
    "vivarium_workbench/lib/investigation_viz_mutations.py",
    "vivarium_workbench/lib/job_status_views.py",
    "vivarium_workbench/lib/csrf.py",
    "vivarium_workbench/lib/source_switch_views.py",
    "vivarium_workbench/lib/source_build_views.py",
    "vivarium_workbench/lib/remote_run_views.py",
    "vivarium_workbench/lib/auth_views.py",
    "vivarium_workbench/lib/git_commit_views.py",
    "vivarium_workbench/lib/work_mutations.py",
    "vivarium_workbench/lib/work_pr_views.py",
    "vivarium_workbench/lib/workspaces_mutations.py",
    "vivarium_workbench/lib/workspaces_process_views.py",
    "vivarium_workbench/lib/misc_mutations.py",
    "vivarium_workbench/lib/misc_post_views.py",
    "vivarium_workbench/lib/viz_accept_views.py",
    "vivarium_workbench/lib/composite_subprocess.py",
    "vivarium_workbench/lib/study_run_state.py",
    "vivarium_workbench/lib/study_run_post.py",
    "vivarium_workbench/lib/study_runs.py",
    "vivarium_workbench/lib/test_run_views.py",
    "vivarium_workbench/lib/comparative_runs.py",
    "vivarium_workbench/lib/run_unblocked_views.py",
    "vivarium_workbench/lib/viz_core.py",
    "vivarium_workbench/lib/viz_preview_views.py",
    "vivarium_workbench/lib/viz_preview_instance_views.py",
    "vivarium_workbench/lib/install_views.py",
    "vivarium_workbench/lib/catalog_install_views.py",
    "vivarium_workbench/lib/catalog_uninstall_views.py",
]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = false
# api/app.py imports the (still-untyped) stdlib server module to reuse its
# HTTP-free payload builders. Don't descend into it (or its heavy transitive
# deps) — treat followed imports as Any so only models.py + app.py are checked.
follow_imports = "skip"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
# `packages` already ships everything tracked under vivarium_dashboard/,
# including static/ and templates/. A force-include of those same paths added
# each data file a SECOND time, which hatchling rejects ("A second file is
# being added to the wheel archive at the same path: .../static/client.js") and
# broke every non-editable/wheel build (e.g. uv sync of the git dependency in
# Docker). They stay shipped via `packages`; no force-include needed.
# Ship the renamed package AND the thin vivarium_dashboard/ back-compat shim
# (deprecated; removed in Phase 3) so old imports keep resolving in wheels too.
packages = ["vivarium_workbench", "vivarium_dashboard"]

[tool.pytest.ini_options]
timeout = 120
timeout_method = "signal"